--- a/src/main/resources/templates/profile-edit-page.html
+++ b/src/main/resources/templates/profile-edit-page.html
@@ -186,7 +186,7 @@
         </form>
         <button type="button" class="new-edit-profile-page-button1">
           <span>
-            <a th:href="@{/profile/{id}(id=${currentUser.id})}">Отмена</a>
+            <a th:href="@{/profile}">Отмена</a>
             <br />
           </span>
         </button>
