back button from error-page back button from item-page fix addition to cart from items\all and items\id in Cart model

--- a/src/main/resources/templates/error-page.html
+++ b/src/main/resources/templates/error-page.html
@@ -60,10 +60,23 @@
                 <h1 class="catalog-page-text">Ошибка</h1>
             </div>
             <p class="catalog-card-text1" th:text="${errorMessage}"></p>
+            </br>
+            </br>
+
+            <div class="button-sort-container button-sort-root-class-name">
+                <button type="button" class="button-sort-button">
+                    <span>
+               <a onclick="history.back()">
+                    <span>Вернуться</span></a>
+                    </span>
+                </button>
+            </div>
+
             <footer class="footer-footer">
               <span class="footer-text">
                 <span>© 2022 С18-501, все права зарегистрированы.</span>
               </span>
+
             </footer>
         </div>
     </div>
