--- a/src/main/resources/templates/invoice-page.html
+++ b/src/main/resources/templates/invoice-page.html
@@ -112,10 +112,35 @@
         </header>
       <div class="invoice-page-container01">
         <h1 class="invoice-page-text">Заведение накладной</h1>
+        <form
+                th:method="POST"
+                th:action="@{/invoices/finditem}"
+                th:object="${searchForm}"
+        >
+          <input
+                  type="text"
+                  th:field="*{searchField}"
+                  placeholder="Поиск товара"
+                  class="tool-box-input input"
+                  required="true"
+          />
+          <button type="submit">
+            <svg viewBox="0 0 950.8571428571428 1024" class="tool-box-search">
+              <path
+                      d="M658.286 475.429c0-141.143-114.857-256-256-256s-256 114.857-256 256 114.857 256 256 256 256-114.857 256-256zM950.857 950.857c0 40-33.143 73.143-73.143 73.143-19.429 0-38.286-8-51.429-21.714l-196-195.429c-66.857 46.286-146.857 70.857-228 70.857-222.286 0-402.286-180-402.286-402.286s180-402.286 402.286-402.286 402.286 180 402.286 402.286c0 81.143-24.571 161.143-70.857 228l196 196c13.143 13.143 21.143 32 21.143 51.429z"
+              ></path>
+            </svg>
+          </button>
+          <a th:href="@{/invoices/new?page=0}">
+            <button type="button">
+              <h3>Сбросить</h3>
+            </button>
+          </a>
+        </form>
       </div>
-
       <div class="invoice-page-container2" th:each="item : ${items}">
-        <div class="invoice-page-container3">
+
+        <div class="invoice-page-container3" th:if="${searchField == null}">
           <a th:href="@{'/invoices/new?page=' + ${currentPage} + '&selectitem=' + ${item.getId()}}">
             <div class="invoice-page-container4">
               <img
@@ -123,59 +148,54 @@
                       th:src="@{${item.getPhoto()}}"
                       class="invoice-page-image"
               />
-              <label class="invoice-page-text1" th:text="${item.getItemName()}"></label>
+              <label class="invoice-page-text1" th:text="${item.getAuthorName() + ' - ' + item.getItemName()}"></label>
             </div>
           </a>
         </div>
+
+        <div class="invoice-page-container3" th:if="${searchField != null}">
+          <a th:href="@{'/invoices/new?page=' + ${currentPage} + '&selectitem=' + ${item.getId()} + '&search=' + ${searchField}}">
+            <div class="invoice-page-container4">
+              <img
+                      alt="image"
+                      th:src="@{${item.getPhoto()}}"
+                      class="invoice-page-image"
+              />
+              <label class="invoice-page-text1" th:text="${item.getAuthorName() + ' - ' + item.getItemName()}"></label>
+            </div>
+          </a>
+        </div>
+
       </div>
 
-      <div class="invoice-page-container8" th:if="${articleToAdd != null}">
-        <a th:href="@{'/invoices/new?page=' + ${previousPage} + '&selectitem=' + ${articleToAdd.getId()} }">
+      <div class="invoice-page-container8" th:if="${searchField == null}">
+        <a th:href="@{'/invoices/new?page=' + ${previousPage}}">
           <button type="button">
             <h2><-  </h2>
-<!--              <svg viewBox="0 0 1024 1024" class="categories-page-icon10">-->
-<!--                <path-->
-<!--                        d="M542.165 780.501l-225.835-225.835h494.336c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-494.336l225.835-225.835c16.683-16.683 16.683-43.691 0-60.331s-43.691-16.683-60.331 0l-298.667 298.667c-4.096 4.096-7.168 8.789-9.259 13.824-2.176 5.205-3.243 10.795-3.243 16.341 0 10.923 4.181 21.845 12.501 30.165l298.667 298.667c16.683 16.683 43.691 16.683 60.331 0s16.683-43.691 0-60.331z"-->
-<!--                ></path>-->
-<!--              </svg>-->
           </button>
         </a>
         <label class="invoice-page-text6" th:text="${currentPage + 1}"></label>
-        <a th:href="@{'/invoices/new?page=' + ${nextPage}  + '&selectitem=' + ${articleToAdd.getId()} }">
+        <a th:href="@{'/invoices/new?page=' + ${nextPage}}">
           <button type="button">
             <h2>  -></h2>
-<!--              <svg viewBox="0 0 1024 1024" class="categories-page-icon12">-->
-<!--                <path-->
-<!--                        d="M481.835 243.499l225.835 225.835h-494.336c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667h494.336l-225.835 225.835c-16.683 16.683-16.683 43.691 0 60.331s43.691 16.683 60.331 0l298.667-298.667c3.925-3.925 7.083-8.619 9.259-13.824 4.309-10.453 4.309-22.229 0-32.683-2.091-5.035-5.163-9.728-9.259-13.824l-298.667-298.667c-16.683-16.683-43.691-16.683-60.331 0s-16.683 43.691 0 60.331z"-->
-<!--                ></path>-->
-<!--              </svg>-->
+          </button>
+        </a>
+      </div>
+
+        <div class="invoice-page-container8" th:if="${searchField != null}">
+          <a th:href="@{'/invoices/new?page=' + ${previousPage} + '&search=' + ${searchField} }">
+            <button type="button">
+              <h2><-  </h2>
+            </button>
+          </a>
+          <label class="invoice-page-text6" th:text="${currentPage + 1}"></label>
+          <a th:href="@{'/invoices/new?page=' + ${nextPage} + '&search=' + ${searchField} }">
+            <button type="button">
+              <h2>  -></h2>
             </button>
           </a>
         </div>
 
-        <div class="invoice-page-container8" th:if="${articleToAdd == null}">
-          <a th:href="@{'/invoices/new?page=' + ${previousPage}}">
-            <button type="button">
-              <h2><-  </h2>
-<!--                <svg viewBox="0 0 1024 1024" class="invoice-page-icon10">-->
-<!--                  <path-->
-<!--                          d="M542.165 780.501l-225.835-225.835h494.336c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-494.336l225.835-225.835c16.683-16.683 16.683-43.691 0-60.331s-43.691-16.683-60.331 0l-298.667 298.667c-4.096 4.096-7.168 8.789-9.259 13.824-2.176 5.205-3.243 10.795-3.243 16.341 0 10.923 4.181 21.845 12.501 30.165l298.667 298.667c16.683 16.683 43.691 16.683 60.331 0s16.683-43.691 0-60.331z"-->
-<!--                  ></path>-->
-<!--                </svg>-->
-            </button>
-          </a>
-          <label class="invoice-page-text6" th:text="${currentPage + 1}"></label>
-          <a th:href="@{'/invoices/new?page=' + ${nextPage}}">
-            <button type="button">
-              <h2>  -></h2>
-<!--                <svg viewBox="0 0 1024 1024" class="invoice-page-icon12">-->
-<!--                  <path-->
-<!--                          d="M481.835 243.499l225.835 225.835h-494.336c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667h494.336l-225.835 225.835c-16.683 16.683-16.683 43.691 0 60.331s43.691 16.683 60.331 0l298.667-298.667c3.925-3.925 7.083-8.619 9.259-13.824 4.309-10.453 4.309-22.229 0-32.683-2.091-5.035-5.163-9.728-9.259-13.824l-298.667-298.667c-16.683-16.683-43.691-16.683-60.331 0s-16.683 43.691 0 60.331z"-->
-<!--                  ></path>-->
-<!--                </svg>-->
-            </button>
-          </a>
-        </div>
         <br/>
         <div class="invoice-page-container02" th:if="${newInvoice}">
           <div th:if="${error} != null" th:text="${error}"></div>
