--- a/src/main/resources/templates/profile-admin-edit-page.html
+++ b/src/main/resources/templates/profile-admin-edit-page.html
@@ -165,7 +165,7 @@
             <input type="hidden" th:field="*{role}"/>
             <button type="submit" class="new-edit-profile-page-button2">
               <span>
-                <span>Дезактивировать</span>
+                <span>Удалить</span>
                 <br />
               </span>
             </button>
