--- a/src/main/resources/templates/invoice-page.html
+++ b/src/main/resources/templates/invoice-page.html
@@ -157,13 +157,21 @@
       <div class="invoice-page-container8" th:if="${searchField == null}">
         <a th:href="@{'/invoices/new?page=' + ${previousPage}}">
           <button type="button">
-            <h2><-  </h2>
+            <svg viewBox="0 0 1024 1024" class="invoice-page-icon10">
+              <path
+                      d="M542.165 780.501l-225.835-225.835h494.336c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-494.336l225.835-225.835c16.683-16.683 16.683-43.691 0-60.331s-43.691-16.683-60.331 0l-298.667 298.667c-4.096 4.096-7.168 8.789-9.259 13.824-2.176 5.205-3.243 10.795-3.243 16.341 0 10.923 4.181 21.845 12.501 30.165l298.667 298.667c16.683 16.683 43.691 16.683 60.331 0s16.683-43.691 0-60.331z"
+              ></path>
+            </svg>
           </button>
         </a>
         <label class="invoice-page-text6" th:text="${currentPage + 1}"></label>
         <a th:href="@{'/invoices/new?page=' + ${nextPage}}">
           <button type="button">
-            <h2>  -></h2>
+            <svg viewBox="0 0 1024 1024" class="invoice-page-icon12">
+              <path
+                      d="M481.835 243.499l225.835 225.835h-494.336c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667h494.336l-225.835 225.835c-16.683 16.683-16.683 43.691 0 60.331s43.691 16.683 60.331 0l298.667-298.667c3.925-3.925 7.083-8.619 9.259-13.824 4.309-10.453 4.309-22.229 0-32.683-2.091-5.035-5.163-9.728-9.259-13.824l-298.667-298.667c-16.683-16.683-43.691-16.683-60.331 0s-16.683 43.691 0 60.331z"
+              ></path>
+            </svg>
           </button>
         </a>
       </div>
@@ -171,13 +179,21 @@
         <div class="invoice-page-container8" th:if="${searchField != null}">
           <a th:href="@{'/invoices/new?page=' + ${previousPage} + '&search=' + ${searchField} }">
             <button type="button">
-              <h2><-  </h2>
+              <svg viewBox="0 0 1024 1024" class="invoice-page-icon10">
+                <path
+                        d="M542.165 780.501l-225.835-225.835h494.336c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-494.336l225.835-225.835c16.683-16.683 16.683-43.691 0-60.331s-43.691-16.683-60.331 0l-298.667 298.667c-4.096 4.096-7.168 8.789-9.259 13.824-2.176 5.205-3.243 10.795-3.243 16.341 0 10.923 4.181 21.845 12.501 30.165l298.667 298.667c16.683 16.683 43.691 16.683 60.331 0s16.683-43.691 0-60.331z"
+                ></path>
+              </svg>
             </button>
           </a>
           <label class="invoice-page-text6" th:text="${currentPage + 1}"></label>
           <a th:href="@{'/invoices/new?page=' + ${nextPage} + '&search=' + ${searchField} }">
             <button type="button">
-              <h2>  -></h2>
+              <svg viewBox="0 0 1024 1024" class="invoice-page-icon12">
+                <path
+                        d="M481.835 243.499l225.835 225.835h-494.336c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667h494.336l-225.835 225.835c-16.683 16.683-16.683 43.691 0 60.331s43.691 16.683 60.331 0l298.667-298.667c3.925-3.925 7.083-8.619 9.259-13.824 4.309-10.453 4.309-22.229 0-32.683-2.091-5.035-5.163-9.728-9.259-13.824l-298.667-298.667c-16.683-16.683-43.691-16.683-60.331 0s-16.683 43.691 0 60.331z"
+                ></path>
+              </svg>
             </button>
           </a>
         </div>
