--- a/src/main/resources/templates/invoices-page.html
+++ b/src/main/resources/templates/invoices-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Накладные - BootlegAmazon</title>
+    <title>Накладные</title>
     <meta property="og:title" content="Invoices-page - Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
