--- a/src/main/resources/static/style/cart-page.css
+++ b/src/main/resources/static/style/cart-page.css
@@ -146,6 +146,7 @@
   justify-content: space-between;
 }
 .cart-page-container4 {
+  width: 40%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -168,6 +169,7 @@
   text-decoration: none;
 }
 .cart-page-container5 {
+  width: 30%;
   display: flex;
   justify-content: center;
 }
@@ -210,6 +212,7 @@
   border-radius: var(--dl-radius-radius-round);
 }
 .cart-page-text3 {
+  width: 30%;
   font-size: 2rem;
   align-self: center;
   font-family: Open Sans;
@@ -217,6 +220,7 @@
   line-height: 1.55;
   text-transform: none;
   text-decoration: none;
+  text-align: center;
 }
 .cart-page-icon4 {
   fill: var(--dl-color-primary-100);
