--- a/src/main/resources/static/style/catalog-card.css
+++ b/src/main/resources/static/style/catalog-card.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 }
 .catalog-card-container {
   display: flex;
@@ -13,7 +13,8 @@
   flex-direction: column;
 }
 .catalog-card-image {
-  width: 10rem;
+  flex: flex-startt;
+  width: 15rem;
   object-fit: cover;
 }
 .catalog-card-text {
@@ -27,7 +28,7 @@
   flex: 0 0 auto;
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   margin-bottom: 0.5rem;
   justify-content: space-around;
 }
@@ -40,14 +41,12 @@
   line-height: 1.55;
   margin-left: 1rem;
   margin-right: 1rem;
-  text-transform: none;
-  text-decoration: none;
 }
 .catalog-card-container2 {
   flex: 0 0 auto;
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   margin-bottom: 0.5rem;
   justify-content: space-around;
 }
@@ -82,11 +81,6 @@
 
 
 
-@media(max-width: 1200px) {
-  .catalog-card-container {
-    justify-content: center;
-  }
-}
 @media(max-width: 767px) {
   .catalog-card-gallery-card {
     flex-direction: column;
