--- a/src/main/resources/static/style/new-order-page.css
+++ b/src/main/resources/static/style/new-order-page.css
@@ -184,7 +184,7 @@
   justify-content: space-between;
 }
 .new-order-page-container04 {
-  width: 70%;
+  width: 60%;
   display: flex;
   align-items: flex-start;
   padding-bottom: 1rem;
@@ -208,7 +208,7 @@
   text-decoration: none;
 }
 .new-order-page-container05 {
-  width: 30%;
+  width: 40%;
   display: flex;
   align-items: flex-start;
   padding-bottom: 1rem;
@@ -223,6 +223,7 @@
   margin-right: 1rem;
   text-transform: none;
   text-decoration: none;
+  width: 50%;
 }
 .new-order-page-text03 {
   font-size: 2rem;
@@ -232,6 +233,8 @@
   line-height: 1.55;
   text-transform: none;
   text-decoration: none;
+  width: 50%;
+  text-align: center;
 }
 .new-order-page-container06 {
   width: 100%;
@@ -241,7 +244,7 @@
   justify-content: space-between;
 }
 .new-order-page-container07 {
-  width: 70%;
+  width: 60%;
   display: flex;
   align-items: flex-start;
   padding-bottom: 1rem;
@@ -265,7 +268,7 @@
   text-decoration: none;
 }
 .new-order-page-container08 {
-  width: 30%;
+  width: 40%;
   display: flex;
   align-items: flex-start;
   padding-bottom: 1rem;
@@ -280,6 +283,7 @@
   margin-right: 1rem;
   text-transform: none;
   text-decoration: none;
+  width: 50%;
 }
 .new-order-page-text06 {
   font-size: 2rem;
@@ -289,6 +293,8 @@
   line-height: 1.55;
   text-transform: none;
   text-decoration: none;
+  width: 50%;
+  text-align: center;
 }
 .new-order-page-container09 {
   width: 100%;
@@ -298,7 +304,7 @@
   justify-content: space-between;
 }
 .new-order-page-container10 {
-  width: 70%;
+  width: 60%;
   display: flex;
   align-items: flex-start;
   padding-bottom: 1rem;
@@ -322,7 +328,7 @@
   text-decoration: none;
 }
 .new-order-page-container11 {
-  width: 30%;
+  width: 40%;
   display: flex;
   align-items: flex-start;
   padding-bottom: 1rem;
@@ -337,6 +343,7 @@
   margin-right: 1rem;
   text-transform: none;
   text-decoration: none;
+  width: 50%;
 }
 .new-order-page-text09 {
   font-size: 2rem;
@@ -346,6 +353,8 @@
   line-height: 1.55;
   text-transform: none;
   text-decoration: none;
+  width: 50%;
+  text-align: center;
 }
 .new-order-page-container12 {
   width: 100%;
@@ -355,7 +364,7 @@
   justify-content: space-between;
 }
 .new-order-page-container13 {
-  width: 70%;
+  width: 60%;
   display: flex;
   align-items: flex-start;
   padding-bottom: 1rem;
@@ -379,7 +388,7 @@
   text-decoration: none;
 }
 .new-order-page-container14 {
-  width: 30%;
+  width: 40%;
   display: flex;
   align-items: flex-start;
   padding-bottom: 1rem;
@@ -394,6 +403,7 @@
   margin-right: 1rem;
   text-transform: none;
   text-decoration: none;
+  width: 50%;
 }
 .new-order-page-text12 {
   font-size: 2rem;
@@ -403,6 +413,8 @@
   line-height: 1.55;
   text-transform: none;
   text-decoration: none;
+  text-align: center;
+  width: 50%;
 }
 .new-order-page-container15 {
   width: 100%;
@@ -412,7 +424,7 @@
   justify-content: space-between;
 }
 .new-order-page-container16 {
-  width: 70%;
+  width: 60%;
   display: flex;
   align-items: flex-start;
   padding-bottom: 1rem;
@@ -436,7 +448,7 @@
   text-decoration: none;
 }
 .new-order-page-container17 {
-  width: 30%;
+  width: 40%;
   display: flex;
   align-items: flex-start;
   padding-bottom: 1rem;
@@ -451,6 +463,7 @@
   margin-right: 1rem;
   text-transform: none;
   text-decoration: none;
+  width: 50%;
 }
 .new-order-page-text15 {
   font-size: 2rem;
@@ -460,6 +473,8 @@
   line-height: 1.55;
   text-transform: none;
   text-decoration: none;
+  width: 50%;
+  text-align: center;
 }
 .new-order-page-container18 {
   width: 100%;
