--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,10 +92,6 @@
 
     }
 
-    .checkbox{
-      width: 2rem;
-    }
-
     .popup {
       position: relative;
       display: inline-block;
@@ -121,7 +117,7 @@
       top: 100%;
       right: 0%;
       margin-left: -80px;
-      flex-direction: column;
+
     }
 
     /* Popup arrow */
@@ -161,6 +157,47 @@
         opacity: 1;
       }
     }
+
+
+    /* The Modal (background) */
+    .modal {
+      display: none;
+      /* Hidden by default */
+      position: absolute;
+      /* Stay in place */
+      z-index: 1;
+      /* Sit on top */
+      padding-top: 100px;
+      /* Location of the box */
+      left: 70%;   top: 2rem;   width: 40rem;
+      /* Full width */
+      height: 100%;
+      /* Full height */
+      overflow: auto;
+      /* Enable scroll if needed */
+      border-radius: 15px;
+    }
+
+    /* Modal Content */
+    .modal-content {
+      background-color: #fefefe;
+      margin: auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+      flex-direction: column;
+    }
+
+    /* The Close Button */
+    .close {
+      color: #aaaaaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+    }
+
+
   </style>
   <link
           rel="stylesheet"
@@ -274,63 +311,100 @@
           </script>
         </div>
 
-        <form
-                th:method="POST"
-                th:action="@{'/items/filter' + ${hrefArgs.getSearchField()}}"
-                th:object="${filterForm}"
-        >
-          <input
-                  type="text"
-                  th:field="*{priceFrom}"
-                  placeholder="Цена от"
-                  class="catalog-page-input-h input"
-          />
-          <input
-                  type="text"
-                  th:field="*{priceTo}"
-                  placeholder="Цена до"
-                  class="catalog-page-input-h input"
-          />
-          <label for="categories">Категория</label>
-          <select name="categories" id="categories" required="" class="catalog-page-select input" th:field="*{categoryName}">
-            <option th:text ="Любая" th:value="any"></option>
-            <div th:each="category : ${categories}">
-              <option th:text ="${category.categoryName}" th:value="${category.categoryName}"></option>
+
+
+        <div>
+          <!-- Trigger/Open The Modal -->
+          <button id="myBtn">
+            <div class="popup button-filter-button" onclick="filterPopupFunction()">
+              <span>
+                Фильтр
+              </span>
             </div>
-          </select>
-          </br>
-          <label for="inStock">В наличии</label>
-          <input type="checkbox" id="inStock" th:field="*{inStock}">
-          <div class="button-filter-button">
-            <button type="submit" class="popup button-filter-button">
-              Отфильтровать
-            </button>
-          </div>
-
-        </form>
-
-        <a th:href="@{'/items/all?page=0' + ${hrefArgs.getHrefArgsExceptFiltration()}}">
-          <button>
-            <label>Сбросить фильтрацию</label>
           </button>
-        </a>
 
-<!--        <div class="button-filter-container button-filter-root-class-name">-->
-<!--          <div class="popup button-filter-button" onclick="filterPopupFunction()">Фильтр-->
-<!--            <span class="popuptext" id="filterPopup">-->
-<!--              -->
+          <!-- The Modal -->
+          <div id="myModal" class="modal">
 
-<!--              -->
-<!--            </span>-->
-<!--          </div>-->
-<!--          <script>-->
-<!--            // When the user clicks on div, open the popup-->
-<!--            function filterPopupFunction() {-->
-<!--              var popup = document.getElementById("filterPopup");-->
-<!--              popup.classList.toggle("show");-->
-<!--            }-->
-<!--          </script>-->
-<!--        </div>-->
+            <!-- Modal content -->
+            <div class="modal-content">
+              <form
+                      th:method="POST"
+                      th:action="@{'/items/filter' + ${hrefArgs.getSearchField()}}"
+                      th:object="${filterForm}"
+              >
+                <input
+                        type="text"
+                        th:field="*{priceFrom}"
+                        placeholder="Цена от"
+                        class="catalog-page-input-h input"
+                />
+                <br>
+                <br>
+                <input
+                        type="text"
+                        th:field="*{priceTo}"
+                        placeholder="Цена до"
+                        class="catalog-page-input-h input"
+                />
+                <label for="categories">
+                  <br>
+                  <br>
+                  Категория
+                </label>
+                <select name="categories" id="categories" required="" class="catalog-page-select input" th:field="*{categoryName}">
+                  <option th:text ="Любая" th:value="any"></option>
+                  <div th:each="category : ${categories}">
+                    <option th:text ="${category.categoryName}" th:value="${category.categoryName}"></option>
+                  </div>
+                </select>
+
+                <label for="inStock">
+                  <br>
+                  В наличи
+                </label>
+                <input type="checkbox" id="inStock" th:field="*{inStock}">
+                <br>
+                <br>
+                <div class="button-filter-button">
+                  <button type="submit" class="popup button-filter-button">
+                    Отфильтровать
+                  </button>
+                </div>
+
+              </form>
+
+              <a th:href="@{'/items/all?page=0' + ${hrefArgs.getHrefArgsExceptFiltration()}}">
+                <button>
+                  <br>
+                  <label>Сбросить фильтрацию</label>
+                </button>
+              </a>
+              <span class="close">&times;</span>
+            </div>
+          </div>
+          <script>
+            // Get the modal
+            var modal = document.getElementById("myModal");
+            // Get the button that opens the modal
+            var btn = document.getElementById("myBtn");
+            // Get the <span> element that closes the modal
+            var span = document.getElementsByClassName("close")[0];
+
+            // When the user clicks the button, open the modal
+            btn.onclick = function() {   modal.style.display = "block"; }
+
+            // When the user clicks on <span> (x), close the modal
+            span.onclick = function() {   modal.style.display = "none"; }
+
+            // When the user clicks anywhere outside of the modal, close it
+            window.onclick = function(event) {
+              if (event.target == modal) {
+                modal.style.display = "none";
+              } }
+          </script>
+        </div>
+
       </div>
     </div>
     <div class="catalog-page-gallery">
@@ -392,6 +466,13 @@
         </button>
       </a>
     </div>
+
+
+
+
+
+
+
     <footer class="footer-footer">
           <span class="footer-text">
             <span>© 2022 С18-501, все права зарегистрированы.</span>
