--- a/src/main/resources/static/style/catalog-card.css
+++ b/src/main/resources/static/style/catalog-card.css
@@ -13,7 +13,7 @@
   flex-direction: column;
 }
 .catalog-card-image {
-  flex: flex-startt;
+  align-self: center;
   width: 15rem;
   object-fit: cover;
 }
@@ -23,6 +23,7 @@
   font-family: Rubik Dirt;
   line-height: 1em;
   margin-bottom: 1rem;
+  text-align: center;
 }
 .catalog-card-container1 {
   flex: 0 0 auto;
@@ -41,6 +42,7 @@
   line-height: 1.55;
   margin-left: 1rem;
   margin-right: 1rem;
+  text-align: center;
 }
 .catalog-card-container2 {
   flex: 0 0 auto;
@@ -60,6 +62,7 @@
   margin-right: 1rem;
   text-transform: none;
   text-decoration: none;
+  text-align: center;
 }
 .catalog-card-icon {
   fill: var(--dl-color-primary-100);
@@ -74,15 +77,4 @@
   padding-left: 0.3rem;
   border-radius: var(--dl-radius-radius-round);
   padding-right: 0.3rem;
-}
-
-
-
-
-
-
-@media(max-width: 767px) {
-  .catalog-card-gallery-card {
-    flex-direction: column;
-  }
 }
